--- a/parcours.html
+++ b/parcours.html
@@ -38,7 +38,7 @@
             <article>
                 <h2>Formations :</h2>
                 <div class="p">
-                        <p><span> 2019:</span>Certification google digital Active</p>
+                        <p><span> 2019:</span>Certification sur les principes fondamentaux du Marketing Numérique.( Google Digital Active)</p>
                     <p><span>2014 :</span> Formation sur la création d'entreprise</p>
                     <p><span>2012 :</span> BAC ES avec suivi section européenne Anglais</p>
                 </div>
