--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <p>Aujourd'hui, un site web est la première vitrine d'une entreprise, institution et doit mettre en avant les valeurs/produits qu'elle souhaite transmettre/vendre. Celui-ci doit être attractif, plaisant, simple d'utilisation pour permettre son utilisation aux plus grand monde.</p>
         <p>Mon coté créatif associé à ma connaissance de l'outil informatique et à mon expérience professionnelle et personnelle me permette d'être à votre écoute et de répondre à vos attentes. Mon intérêt pour les nouvelles technologie et le numérique est un plus dans ce métier qui me permet de me tenir à jour dans ce qui peut se faire.</p>
         <p>A la recherche d'un poste en tant que Développeur/Intégrateur Web qui me permettrait de mettre à profit mon expérence professionnelle. <br>
-            Mon expérience en tant que chargée de clientèle me permet d'avoir les principes d'une relations clientèle en poche et donc une adaptativité facilité envers le client.<br>
-            Lors de ma création d'entreprise, j'ai du prouver que j'étais quelqu'un d'entreprenante, autonome et responsable.
-         </p>
+        Mon expérience en tant que chargée de clientèle me permet d'avoir les principes d'une relations clientèle en poche et donc une adaptativité facilité envers le client.<br>
+        Lors de ma création d'entreprise, j'ai dû prouver que j'étais quelqu'un d'entreprenante, autonome et responsable.
+        </p>
     </div>
     
     <footer>
