--- a/parcours.html
+++ b/parcours.html
@@ -19,13 +19,15 @@
         </div>
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center ">
-                    <a class="image" target="blank" href="https://www.linkedin.com/in/pauline-quintyn-199199ba/"> <img class="profil" src="profil.png" alt="profil"></a>
+                    <a class="image" target="blank" href="https://www.linkedin.com/in/pauline-quintyn-199199ba/"> <img class="profil" src="profil.png" alt="profil">
+                    </a>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center">
                 <nav class="navbar navbar-expand-lg navbar-light bg-transparent ">
-                    <a class="navbar-brand text-info " href="index.html">Accueil</a>
+                    <a class="navbar-brand text-info " href="index.html">Accueil                      
+                    </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
