--- a/parcours.html
+++ b/parcours.html
@@ -5,133 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>QUINTYN PAULINE</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Maven+Pro|Permanent+Marker&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="parcours.css">
+    <link href="https://fonts.googleapis.com/css?family=Amiri|Sriracha&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-    <header class="bg-secondary">
-        <div class="row">
-            <div class="col-md-12 d-flex justify-content-center mt-4 " >
-                <h1 class="text-light">cv intégrateur/développeur web</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 d-flex justify-content-center ">
-                    <a class="image" target="blank" href="https://www.linkedin.com/in/pauline-quintyn-199199ba/"> <img class="profil" src="profil.png" alt="profil">
-                    </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 d-flex justify-content-center">
-                <nav class="navbar navbar-expand-lg navbar-light bg-transparent ">
-                    <a class="navbar-brand text-info " href="index.html">Accueil                      
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                        <a class="nav-item nav-link active text-info" href="parcours.html">Parcours<span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link text-info" href="portefolio.html">Portefolio</a>
-                        <a class="nav-item nav-link text-info" href="index.html#formulaire">Contact</a>
-                        <a class="nav-item nav-link  text-info" target=blank href="cv 2019.png" tabindex="-1" aria-disabled="true">Télécharger mon cv </a>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-        </div>
-    </header>
-    <main>
-        <div class="row">
-            <div class="col-md-12  d-flex justify-content-center mt-2">
-                <h2>Formations</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 d-flex justify-content-center bg-secondary border border-info">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                            </ol>
-                            <div class="carousel-inner">
-                              <div class="carousel-item active">
-                                <br>
-                                <p>2019 : Certification sur les principes fondamentaux du Marketing Numérique.( Google Digital Active)</p>
-                                <br>
-                              </div>
-                              <div class="carousel-item">
-                                <br>
-                                <p>2014 : Formation sur la création d'entreprise</p>
-                                <br>
-                              </div>
-                              <div class="carousel-item">
-                                <br>
-                                <p><span>2012 :</span> BAC ES avec suivi section européenne Anglais</p>
-                                <br>
-                              </div>
-                            </div>
-                    </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 d-flex justify-content-center mt-2 ">
-                <h2>Expérience</h2>
-            </div>
-            <div class="col-md-12 d-flex justify-content-center bg-secondary border border-info ">
-                    <div class="bd-example">
-                            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-                              <ol class="carousel-indicators">
-                                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                              </ol>
-                              <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                  <img src="barkraaft.png" class="d-block w-100" alt="barkraaft">
-                                  <div class="carousel-caption d-none d-md-block">
-                                    <h5 class="text-info bg-dark">2014-2016 : Création d'entreprise </h5>
-                                    <p class="text-info bg-dark">Création d'un bar à thème sur les jeux-vidéos sur la ville de Poitiers. Projet annulé par manque de financement. </p>
-                                  </div>
-                                </div>
-                                <div class="carousel-item">
-                                  <img src="armatis.png" class="d-block w-100" alt="">
-                                  <div class="carousel-caption d-none d-md-block">
-                                        <div class="text-dark">
-                                    <h5>2012/2013-2014/2015 : Chargée de clientèle</h5>
-                                    <p>Chargée de clientèle sur plusieurs services, comme services clientèle en téléphonie ( gestion des contrats,problème de facture, nouvelles commandes,) Aide technique pour les professionnels de santé ( dépannage informatique) gestion d'un programme de fidélité pour une compagnie pétrolière ( commmande des cadeaux, création des comptes fidélité), démarchage et prise de commande  auprès des pharmacies pour un laboratoir</p>
-                                        </div>
-                                  </div>
-                                </div>
-                                <div class="carousel-item">
-                                  <img src="..." class="d-block w-100" alt="...">
-                                  <div class="carousel-caption d-none d-md-block">
-                                    <h5>Third slide label</h5>
-                                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                                  </div>
-                                </div>
-                              </div>
-                              <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                              </a>
-                              <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                              </a>
-                            </div>
-                          </div>
-            </div>
-        </div>
-    </main>
- 
+  <header>
 
- </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
- 
+    <h1>CV Intégrateur / Développeur web</h1>
+    <h2>QUINTYN Pauline</h2>
+        <div class="header">
+          <div >
+              <a class="image" target="blank" href="https://  www.linkedin.com/in/pauline-quintyn-199199ba/">
+                <img class="profil"src="profil.png" alt="profil" width="10%" height="10%">
+              </a>
+          </div>
+          <nav>
+            <ul>
+              <li><a href="index.html">Accueil</a></li>
+              <li><a href="parcours.html">Parcours</a></li>
+              <li><a href="portefolio.html">Portefolio</a></li> 
+              <li><a href="#formulaire">Contact</a></li>      
+              <li><a target="blank" href="cv 2019.png">Télécharger mon cv</a> </li>
+            </ul>
+          </nav> 
+        </div>             
+  </header>
+  <main>
+                <h2>Formations</h2>
+  </main>
 </body>
+</html>
