--- a/parcours.html
+++ b/parcours.html
@@ -23,8 +23,8 @@
             <ul>
               <li><a href="index.html">Accueil</a></li>
               <li><a href="parcours.html">Parcours</a></li>
-              <li><a href="portefolio.html">Portefolio</a></li> 
-              <li><a href="#formulaire">Contact</a></li>      
+              <li><a href="portfolio.html">Portfolio</a></li> 
+              <li><a href="index.html#formulaire">Contact</a></li>      
               <li><a target="blank" href="cv 2019.png">Télécharger mon cv</a> </li>
             </ul>
           </nav> 
