--- a/parcours.html
+++ b/parcours.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>QUINTYN PAULINE</title>
+    <script src="https://kit.fontawesome.com/1363395164.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Amiri|Sriracha&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -31,7 +32,46 @@
         </div>             
   </header>
   <main>
-                <h2>Formations</h2>
+    <section>
+      <h2>Expériences</h2>
+      <article>
+        <h3><span>2014-2015 :</span> Chargé de clientèle (Armatis-LC)</h3> <img src="Armatis.jpg" alt="armatis" width="10%">
+        <h3><span>2014-2016 :</span> Création d'un bar à thème sur les jeux-vidéos</h3> <img src="Bar Kraaft.jpg" alt="BarKraaft" width="10%" >
+        <h3><span>2012-2013 :</span> Chargé de clientèle (Armatis-LC)</h3><img src="Armatis.jpg" alt="armatis" width="10%">
+        <h3><span>2012 :</span> Intérim dans la grande distribution <h3><i class="fas fa-store fa-9x"></i>
+        <h3><span>Eté 2011 :</span> Garde d'enfant à domicile</h3><i class="fas fa-baby-carriage fa-9x"></i>
+        <h3><span>Eté 2011 :</span> Secrétaire dans une entreprise de BTP</h3><i class="fas fa-pen fa-9x"></i>
+        <h3><span>Eté 2012-2013 :</span> Bénévole au festival des arts osés</h3><img src="300x300-ct.jpg" alt="arts'osés" width="10%">
+      </article>
+    </section>
+    <section>
+      <h2>Formations</h2>
+      <article>
+        <h3><span> 2019:</span>Certification sur les principes fondamentaux du Marketing Numérique.( Google Digital Active)</h3><img src="digital active.jpg" alt="digital active" width="10%">
+        <h3><span>2014 :</span> Formation sur la création d'entreprise via l'ADIE</h3><img src="adie.jpg" alt="adie" width="10%">
+        <h3><span>2012 :</span> BAC ES avec suivi section européenne Anglais</h3> <i class="fas fa-graduation-cap fa-9x"></i>
+      </article>
+    </section>
+    <section>
+      <h2>Compétences</h2>
+    </section>
+      <article>
+        <h3><span>Français :</span> <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></h3>
+        <h3><span>Anglais :</span> <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></h3>
+        <h3><span>Word :</span> <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></h3>
+        <h3><span>Photoshop :</span> <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></h3>
+        <h3><span>Maîtrise d'internet :</span> <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></h3>
+        <h3><span>Comunication sur les réseaux sociaux </span>: <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></h3>
+        <h3>Permis B</h3>
+      </article>
+    <section>
+      <h2>Centre d'intérêt</h2>
+      <h3>Nouvelle Technologie</h3><i class="fas fa-microchip fa-9x"></i>
+      <h3>Ecologie</h3><i class="fas fa-leaf fa-9x"></i>
+      <h3>Jeux vidéo</h3><i class="fas fa-ghost fa-9x"></i>
+      <h3>Jeux de société</h3><i class="fas fa-dice fa-9x"></i>
+    </section>
+                
   </main>
 </body>
 </html>
